# lisa

./: .env.example  .gitignore  CLAUDE.md  instructions.md
.claude/: settings.local.json
.planning/: AGENT_COORDINATION.md  PROJECT.md  PROJECT_REWRITE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-voice-pipeline/: 02-01-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  .gitignore  pyproject.toml
backend/lisa/: config.py  db.py  main.py  models.py
backend/lisa/api/: commands.py  devices.py  ws.py
backend/lisa/device/: fake_adapter.py  interface.py  kasa_adapter.py
backend/lisa/services/: allowlist.py  device_service.py  llm_intent_service.py  stt_service.py  tts_service.py  voice_pipeline.py
backend/lisa/voice/: __init__.py  audio_capture.py  voice_loop.py  wake_word.py
backend/tests/: conftest.py  test_allowlist.py  test_api_commands.py  test_api_devices.py  test_api_voice.py  test_config_db.py  test_device_service.py  test_llm_intent_service.py  test_stt_service.py  test_tts_service.py  test_voice_loop.py  test_voice_pipeline.py  test_wake_word.py  test_ws.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
systemd/: lisa-backend.service
(+27 files in other folders)
