[project]
name = "lisa-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.44.0",
    "python-kasa>=0.10.0",
    "aiosqlite>=0.22.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
